--- a/Eventhings/clients/layouts/banner.html
+++ b/Eventhings/clients/layouts/banner.html
@@ -5,7 +5,7 @@
             <p class="text-dark">We have created a remarkable atmosphere, defying the traditional mainstream settings and services, come in, let us serve you better!</p>
             <button class="btn btn-primary mb-4">Get Started</button>
             <div class="my-2">
-                <p class="h5">GET OUR MOBILE APP</p>
+                <p class="h5">OUR MOBILE APP</p>
             </div>
             <div>
                 <button class="btn btn-app-download mr-2"><img src="assets/images/ios.svg" alt="App store"></button>
