--- a/Eventhings/clients/layouts/special-offer.html
+++ b/Eventhings/clients/layouts/special-offer.html
@@ -6,7 +6,7 @@
             </div>
             <div class="col-md-6">
                 <h2 class="section-title">Get special offers on the things you love</h2>
-                <p class="mb-5">He has led a remarkable campaign, defying the traditional mainstream parties courtesy of his En Marche! movement. For many, however, the campaign has become less about backing Macron and instead about voting against Le Pen, the National Front candidate.</p>
+                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum..</p>
                 <div class="row">
                     <div class="col-md-6 mb-3">
                         <div class="media landing-feature">
