--- a/Eventhings/clients/layouts/app-features.html
+++ b/Eventhings/clients/layouts/app-features.html
@@ -4,22 +4,22 @@
         <div class="row">
             <div class="col-lg-4 mb-4 mb-lg-0">
                 <h5>Secure Atmosphere</h5>
-                <p class="text-dark">No matter what kind of time you have to share, you can assured we have you covered.</p>
+                <p class="text-dark">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum.</p>
                 <p class="mb-5"><a href="#!" class="text-primary mb-5">Find out More</a></p>
                 <h5>Fully functional</h5>
-                <p class="text-dark">No matter what kind of home you have to share, you can increase your earnings.</p>
+                <p class="text-dark">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                 <p class="mb-5"><a href="#!" class="text-primary mb-5">Find out More</a></p>
             </div>
             <div class="col-lg-4 mb-3 mb-lg-0">
                 <h5>Live Chat</h5>
-                <p class="text-dark">No matter what kind of home you have to share, you can increase your earnings.</p>
+                <p class="text-dark">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                 <p class="mb-5"><a href="#!" class="text-primary mb-5">Find out More</a></p>
                 <h5>Powerful dashboard</h5>
-                <p class="text-dark">No matter what kind of home you have to share, you can increase your earnings.</p>
+                <p class="text-dark">Lorem Ipsum is simply dummy text of the printing and typesetting industry..</p>
                 <p class="mb-5"><a href="#!" class="text-primary mb-5">Find out More</a></p>
             </div>
             <div class="col-lg-4">
-                <h6 class="text-gray font-os font-weight-semibold">Trusted by the world's best</h6>
+                <h6 class="text-gray font-os font-weight-semibold">Trusted by popular brands</h6>
                 <div id="landingClientCarousel" class="carousel slide landing-client-carousel" data-ride="carousel">
                     <div class="carousel-inner" role="listbox">
                         <div class="carousel-item active">
