--- a/Eventhings/clients/layouts/faq.html
+++ b/Eventhings/clients/layouts/faq.html
@@ -7,7 +7,7 @@
                 <div class="card mb-3 landing-faq-card">
                     <div class="card-header bg-white" id="faqOneTitle">
                         <a href="#faqOneCollapse" class="d-flex align-items-center" data-toggle="collapse">
-                            <h6 class="mb-0">What is Foi app?</h6> <i class="far fa-plus-square ml-auto"></i>
+                            <h6 class="mb-0">What is Eventi.ng?</h6> <i class="far fa-plus-square ml-auto"></i>
                         </a>
                     </div>
                     <div id="faqOneCollapse" class="collapse" aria-labelledby="faqOneTitle">
@@ -19,7 +19,7 @@
                 <div class="card mb-3 landing-faq-card">
                     <div class="card-header bg-white" id="faqTwoTitle">
                         <a href="#faqTwoCollapse" class="d-flex align-items-center" data-toggle="collapse">
-                            <h6 class="mb-0">Why should I use Foi app?</h6> <i class="far fa-plus-square ml-auto"></i>
+                            <h6 class="mb-0">Why should I trust your services?</h6> <i class="far fa-plus-square ml-auto"></i>
                         </a>
                     </div>
                     <div id="faqTwoCollapse" class="collapse" aria-labelledby="faqTwoTitle">
@@ -31,7 +31,7 @@
                 <div class="card mb-3 landing-faq-card">
                     <div class="card-header bg-white" id="faqThreeTitle">
                         <a href="#faqThreeCollapse" class="d-flex align-items-center" data-toggle="collapse">
-                            <h6 class="mb-0">How can I use Foi app?</h6> <i class="far fa-plus-square ml-auto"></i>
+                            <h6 class="mb-0">What services do you offer?</h6> <i class="far fa-plus-square ml-auto"></i>
                         </a>
                     </div>
                     <div id="faqThreeCollapse" class="collapse" aria-labelledby="faqThreeTitle">
