--- a/Eventhings/clients/layouts/plan.html
+++ b/Eventhings/clients/layouts/plan.html
@@ -1,12 +1,14 @@
 ﻿<section class="py-5 mb-5">
     <div class="container">
-        <h2>Choose the plan that’s right for yor business</h2>
-        <p class="text-muted mb-5">Thank you for your very professional and prompt response. I wished I had found you before </p>
+        <h2>Eventi - Our member window has just open</h2>
+        <p class="text-muted mb-5">
+        Join a family of love and good memories, join our membership club and benefit from great deals and discount. 
+        </p>
         <div class="row">
             <div class="col-lg-4 mb-4">
                 <div class="card pricing-card border-warning">
                     <div class="card-body">
-                        <h3 class="mb-1">Starter</h3>
+                        <h3 class="mb-1">SAPA Starter</h3>
                         <h3 class="mb-1 text-warning">Free</h3>
                         <p class="payment-period">Per month</p>
                         <p class="mb-4">Thank you for your very professional and prompt response.</p>
@@ -17,7 +19,7 @@
             <div class="col-lg-4 mb-4">
                 <div class="card pricing-card border-primary active">
                     <div class="card-body">
-                        <h3>Popular</h3>
+                        <h3>Igboro Popular</h3>
                         <h3 class="text-primary">$23.00</h3>
                         <p class="payment-period">Per month</p>
                         <p class="mb-4">Thank you for your very professional and prompt response.</p>
@@ -28,7 +30,7 @@
             <div class="col-lg-4 mb-4">
                 <div class="card pricing-card border-success">
                     <div class="card-body">
-                        <h3>Enterprise</h3>
+                        <h3>Twale Enterprise</h3>
                         <h3 class="text-success">$40.00</h3>
                         <p class="payment-period">Per month</p>
                         <p class="mb-4">Thank you for your very professional and prompt response.</p>
