--- a/Eventhings/clients/auth/auth.Master
+++ b/Eventhings/clients/auth/auth.Master
@@ -18,6 +18,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css" rel="stylesheet" />
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 
+    <link href="../assets/css/select2.min.css" rel="stylesheet" />
+
 </head>
 <body>
     <header class="foi-header" style="padding-top: 2px">
@@ -35,22 +37,25 @@
                             <a class="nav-link" href="dashboard.aspx">Dashboard |<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="qrcode.aspx">QR Code |</a>
+                            <a class="nav-link" href="qrcode.aspx">QR Code|</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="service.html">Customer |</a>
+                            <a class="nav-link" href="customer.aspx">Customer|</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Staff |</a>
+                            <a class="nav-link" href="staff.aspx">Staff|</a>
+                        </li>
+                         <li class="nav-item">
+                            <a class="nav-link" href="item.aspx">Products|</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Sales |</a>
+                            <a class="nav-link" href="sales.aspx">Sales|</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">E-Wallet |</a>
+                            <a class="nav-link" href="contact.html">E-Wallet|</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="events.aspx">Events |</a>
+                            <a class="nav-link" href="events.aspx">Events|</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav mt-2 mt-lg-0">
@@ -143,6 +148,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrious/4.0.2/qrious.min.js"></script>
 
     <script src="../assets/js/app.js"></script>
+
+    <script src="../assets/js/select2.min.js"></script>
 
     <asp:ContentPlaceHolder ID="scriptContentPlaceHolder" runat="server">
     </asp:ContentPlaceHolder>
