--- a/Eventhings/clients/auth/auth.Master
+++ b/Eventhings/clients/auth/auth.Master
@@ -78,7 +78,7 @@
                                 </ul>
                                 <ul class="navbar-nav mt-2 mt-lg-0">
                                     <li class="nav-item">
-                                        <a class="btn btn-light" id="btnLogout" onclick="LogOut()" href="../new/login.html">Logout</a>
+                                        <a class="btn btn-light" id="btnLogout" onclick="LogOut()">Logout</a>
                                     </li>
                                 </ul>
                             </div>
