--- a/Eventhings/clients/auth/auth.Master
+++ b/Eventhings/clients/auth/auth.Master
@@ -10,7 +10,7 @@
 
         if (user == null) {
 
-            window.location.href = "../login.html?redirect=" + window.location.href;
+            window.location.href = "../new/login.html?redirect=" + window.location.href;
         }
 
         //alert(user);
@@ -78,7 +78,7 @@
                                 </ul>
                                 <ul class="navbar-nav mt-2 mt-lg-0">
                                     <li class="nav-item">
-                                        <a class="btn btn-light" id="btnLogout" onclick="LogOut()">Logout</a>
+                                        <a class="btn btn-light" id="btnLogout" onclick="LogOut()" href="../new/login.html">Logout</a>
                                     </li>
                                 </ul>
                             </div>
