created the receipt module abd updated upcoming events

--- a/Eventhings/clients/new/layouts/customermenu.html
+++ b/Eventhings/clients/new/layouts/customermenu.html
@@ -13,9 +13,9 @@
         <a data-barba href="#">e-wallet</a>
     </li>
 
-    <!--<li class="">
-        <a data-barba href="#">Events</a>
-    </li>-->
+    <li class="">
+        <a data-barba href="../../../clients/new/transactions.html">Transactions</a>
+    </li>
 
     <!--<li class="">
         <a data-barba href="contact-1.html">Settings</a>
